# globlin

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.coverage.config.ts
.github/workflows/: bench.yml  build.yml  coverage.yml  release.yml  test.yml
benches/: bench-ci.ts  benchmark.sh  cache_bench.ts  cache_performance_bench.ts  cache_reuse_bench.ts  component_bench.rs  debug_depth.ts  fast_path_bench.ts  glob_bench.rs  io_deep_bench.ts  io_strategy_bench.ts  macos_walker_bench.ts  multi_base_bench.ts  node_bench.ts  parallel_bench.ts  patterns.sh  phase2_bench.ts  poc_bench.ts  profile_boundary.ts  profile_node.ts  profile_patterns.ts  pruning_bench.ts  readdir_bench.ts  scoped_bench.ts  setup-fixtures.js  setup-huge-fixture.js  static_pattern_bench.ts  verify_targets.ts  vs_fast_glob_bench.ts  walker_comparison.rs
benches/api/: async_bench.ts  async_bottleneck_analysis.ts  cache_lockfree_bench.ts  cross_api_bench.ts  glob_class_bench.ts  glob_class_bottleneck_analysis.ts  iterator_bench.ts  iterator_bottleneck_analysis.ts  stream_bench.ts  stream_bottleneck_analysis.ts  sync_bench.ts  sync_bottleneck_analysis.ts  utility_bench.ts  utility_bottleneck_analysis.ts  with_file_types_bench.ts  with_file_types_bottleneck_analysis.ts  with_file_types_optimization_bench.ts
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
docs/api/: Glob-class.md  glob.md  globIterate.md  globStream.md  globSync.md  options.md  utilities.md
docs/guides/: api-performance-guide.md  migration-from-glob.md  performance-tuning.md  troubleshooting.md
js/: index.ts  stream.ts  types.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: compare-benchmarks.js
src/: cache.rs  gcd_walker.rs  glob.rs  ignore.rs  io_uring_walker.rs  lib.rs  macos_walker.rs  options.rs  pattern.rs  processor.rs  simd.rs  util.rs  walker.rs
tests/: benchmark.test.ts  fixtures.ts  fuzz.test.ts  harness.test.ts  harness.ts  performance-regression.test.ts  property.test.ts  real-world.test.ts  types.test-d.ts  utils.ts
tests/compat/: absolute.test.ts  broken-symlink.test.ts  cache-reuse.test.ts  custom-ignore.test.ts  cwd-noent.test.ts  cwd-test.test.ts  cyclic-symlink.test.ts  dot-relative.test.ts  dot-slash-prefix.test.ts  dot.test.ts  empty-set.test.ts  error-messages.test.ts  escape.test.ts  extglob.test.ts  filesystem-errors.test.ts  follow.test.ts  glob-class-cache.test.ts  globstar.test.ts  helpful-errors.test.ts  ignore-dotfiles.test.ts  ignore-globstar-suffix.test.ts  ignore.test.ts  include-child-matches.test.ts  invalid-patterns.test.ts  macos-behavior.test.ts  macos-sandbox.test.ts  mark.test.ts  match-base.test.ts  max-depth.test.ts  multi-pattern.test.ts  nocase.test.ts  nodir.test.ts  options.test.ts  parallel.test.ts  parent-navigation.test.ts  permission-errors.test.ts  progra-tilde.test.ts  readme-issue.test.ts  signal.test.ts  slash-cwd.test.ts  (+7 more)
www/: package.json
www/app/: globals.css  layout.tsx  page.tsx
