[package]
name = "globlin"
version = "0.1.0"
edition = "2021"
authors = ["Globlin Contributors"]
description = "A high-performance glob pattern matcher - 20-30x faster drop-in replacement for glob"
license = "MIT"
repository = "https://github.com/yourusername/globlin"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2.16", features = ["async", "napi8", "tokio_rt"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.35", features = ["fs", "sync", "rt-multi-thread"] }

# Pattern matching - custom implementation (cannot use globset)
regex = "1.10"
fancy-regex = "0.13"  # For look-ahead/look-behind support (used in extglob negation)

# Filesystem traversal - starting with walkdir
walkdir = "2.4"

# Utilities
once_cell = "1.19"
thiserror = "1.0"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
jwalk = "0.8"
ignore = "0.4"
num_cpus = "1.16"

[[bench]]
name = "glob_bench"
harness = false

[[bench]]
name = "walker_comparison"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
