[package]
name = "globlin"
version = "0.1.0"
edition = "2021"
authors = ["Globlin Contributors"]
description = "A high-performance glob pattern matcher - 20-30x faster drop-in replacement for glob"
license = "MIT"
repository = "https://github.com/yourusername/globlin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2.16", features = ["async", "napi8", "tokio_rt"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.35", features = ["fs", "sync", "rt-multi-thread"] }

# Pattern matching - custom implementation (cannot use globset)
regex = "1.10"
fancy-regex = "0.13"  # For look-ahead/look-behind support (used in extglob negation)

# Filesystem traversal - starting with walkdir
walkdir = "2.4"
# Parallel walking (optional, for parallel: true mode)
jwalk = "0.8"
rayon = "1.8"

# Utilities
once_cell = "1.19"
thiserror = "1.0"
lru = "0.16"
bumpalo = "3.14"  # Arena allocator for temporary allocations
compact_str = "0.8"  # Small string optimization
smallvec = { version = "1.13", features = ["union"] }  # Stack-allocated small vectors
ahash = "0.8"  # Faster hashing for HashSet/HashMap

# Platform-specific I/O optimizations (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"  # For getdents64 syscall and kernel version detection

# Platform-specific I/O optimizations (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"  # For getdirentries64 syscall

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
ignore = "0.4"
num_cpus = "1.16"

[[bench]]
name = "glob_bench"
harness = false

[[bench]]
name = "walker_comparison"
harness = false

[[bench]]
name = "component_bench"
harness = false

[[bin]]
name = "profile_glob"
path = "src/bin/profile_glob.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
